2003-03-13  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* test/roundtrip.cpp: Detect cases where files have no atoms.

	* test/Makefile.in: Add targets to create roundtrip program.

	* src/cacao.cpp (ReadCaccrt): Add an obUnitCell object to the
	molecule for keeping track of unit cell data. Call
	ConnectTheDots() and PerceiveBondOrders().
	(WriteCaccrt): If obUnitCell data exists, output unit cell data.

	* src/dmol.cpp (ReadDMol): Read $cell vector section if it exists.
	(WriteDMol): Write unit cell data if it exists.

	* src/parsmi.cpp (ParseComplex): Add isotope information where
	available.

	* src/generic.cpp (OBUnitCell::ctor): Make sure to set the generic
	data type and string.

	* src/generic.h (OBUnitCell): Add space group storage as a string.

	* src/mopac.cpp (ReadMOPAC): Remove debugging output left
	inadvertantly.

2003-03-13  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/generic.cpp, src/generic.h: Add support for retrieving
	OBUnitCell data by a matrix3x3 and add a new method
	GetOrthoMatrix() for translating from fractional coordinates.

	* src/pdb.cpp (WritePDB): Make sure that residue and atom names
	are only a maximum length to format columns correctly. Add element
	symbol to columns 77 and 78 to better support the current standard.

	* src/math/matrix3x3.h, src/math/matrix3x3.cpp (SetRow): New
	method to set a row from a vector3.

	* src/mpqc.cpp (ReadMPQC): Fix bugs in MPQC output reading,
	uncovered by new roundtrip testing.

	* src/cacao.cpp (WriteCaccrt): Make sure the buffer is actually
	written to the file. Previous output passed roundtrip testing (no
	coredumps) but nothing was actually written to the file!

	* test/roundtrip.cpp: New file to compare two molecules after
	roundtripping. (Perhaps it should be called molcmp?)

2003-03-12  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/pdb.cpp (WritePDB): Make sure that atom type definitions are
	written correctly as per the PDB standard. Fixes PR#701620, as